<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogSettingsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shap_settings"
            >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:text="@string/fragment_dialog_Choose_language"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/translation1"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_english"
                android:text="@string/fragment_dialog_English"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_french"
                android:text="@string/fragment_dialog_French"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_german"
                android:text="@string/fragment_dialog_German"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_turkish"
                android:text="@string/fragment_dialog_Turkish"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_spanish"
                android:text="@string/fragment_dialog_Spanish"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_hindi"
                android:text="@string/fragment_dialog_hindi"
                android:fontFamily="@font/andika"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_chinese"
                android:text="@string/fragment_dialog_chinese"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_albanian"
                android:text="@string/fragment_dialog_Albanian"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_indonesian"
                android:text="@string/fragment_dialog_Indonesian"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_persian"
                android:text="@string/fragment_dialog_Persian"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_dialog_rb_Urdu"
                android:text="@string/fragment_dialog_urdu"
                android:textSize="@dimen/_18ssp"
                android:fontFamily="@font/andika"
                android:textStyle="bold"
                />


        </RadioGroup>

    </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>